src/objects/Meeting_Tasks_MERC__c.object
<CustomObject>
    <description>Captures to-do items for all meeting management functions : MERC : Created on 21/04/2015 by Oliver Dunford, Mavens Consulting</description>
    <fields>
        <fullName>Comments_MERC__c</fullName>
        <description>Holds all comments : MERC : Created on 21/04/2015 by Oliver Dunford</description>
        <label>Comments</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Completed_Date_MERC__c</fullName>
        <description>The date that the task ws completed : MERC : Created on 17/06/2015 by Kyle Thornton, Mavens Consulting</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_MERC__c</fullName>
        <description>The Task Due Date : MERC : Created on 21/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluate_Rules_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that flow should kick off to evaluate any rules that may apply to this task : MERC : Created on 18/06/2015 by Kyle Thornton, Mavens Consulting</description>
        <label>Evaluate Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Country_of_Residence_Stamped_MERC__c</fullName>
        <description>HCP Country of Residence stamped from the HCP Country of Residence from the Account object. Needed to drive visibility against territory for Meeting Task records. Created 22/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>HCP Country of Residence (Stamped)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this task is a follow up task. Used for SLA reporting : MERC : Created on 17/06/2015 by Kyle Thornton, Mavens Consulting</description>
        <label>Is Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <description>Pulls down the meeting id. Used in trigger to pass to the lockedrecordhandler : MERC :  Created on 23/04/2015 by Kyle Thornton, Mavens Consulting</description>
        <formula>Meeting_Process_MERC__r.Meeting_Participant_MERC__r.Meeting_MERC__c</formula>
        <label>Meeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_MERC__c</fullName>
        <description>Pulls the meeting partcipant Id down to the Task : MERC : Created on 17/06/2015 by Kyle Thornton, Mavens Consulting</description>
        <formula>Meeting_Process_MERC__r.Meeting_Participant_MERC__c</formula>
        <label>Meeting Participant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Process_Logic_Key_MERC__c</fullName>
        <description>Used to match a corresponding key in the Meeting Process Logic object to return a match and detail the following automated steps : MERC : Created on 22/06/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>TEXT(Meeting_Process_MERC__r.Process_Type_MERC__c) &amp; &quot;;&quot; &amp; TEXT( Task_Status_MERC__c )</formula>
        <label>Meeting Process Logic Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Process_MERC__c</fullName>
        <description>Relates a meeting task to it&apos;s parent process : MERC : Created on 17/06/2015 by Kyle Thornton, Mavens Consulting</description>
        <label>Meeting Process</label>
        <referenceTo>Meeting_Process_MERC__c</referenceTo>
        <relationshipLabel>Meeting Tasks</relationshipLabel>
        <relationshipName>Meeting_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Set via workflow for integration with external systems : MERC : Created on 27/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Task_MERC__c</fullName>
        <description>Indicates the task is open. Facilitates reports writing : MERC : Created on 18/06/2015 by Kyle Thornton, Mavens Consulting</description>
        <formula>CONTAINS( TEXT(Task_Status_MERC__c ), &apos;Incomplete&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Type_MERC__c</fullName>
        <description>Indicates the meeting type : MERC : Created on 22/06/2015 by Kyle Thornton, Mavens Consulting</description>
        <formula>TEXT(Meeting_Process_MERC__r.Process_Type_MERC__c)</formula>
        <label>Process Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Status_MERC__c</fullName>
        <description>Stores the Status of each Task, drives automation : MERC : Created on 21/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>The Status of the current Meeting Task.  For example, &quot;Completed&quot; would indicate that you have completed a Follow Up task by contacting the HCP.  There may be several Follow Up tasks for each Process.</inlineHelpText>
        <label>Task Status</label>
        <picklist>
            <picklistValues>
                <fullName>Incomplete</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Continue Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Process Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Process Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Unresponsive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meeting Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task_Status_MERC__c</columns>
        <columns>Due_Date_MERC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Meeting Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>